# claude-sandbox

./: Cargo.toml  FUTURE_WORK.md  HARDENING.md  README.md  auth-proxy.py  container.nix  flake.nix  home-module.nix  module.nix  package.nix  proxy.nix  sandbox-module.nix  sandbox.nix  test-lib.sh  test-redteam.sh  test-sandbox.sh
.github/workflows/: ci.yml
crates/claude-proxy/: Cargo.toml
crates/claude-proxy/src/: cli.rs  config.rs  creds.rs  login.rs  main.rs  privdrop.rs  server.rs  token_store.rs
crates/claude-sandboxed/: Cargo.toml
crates/claude-sandboxed/src/: cli.rs  config.rs  constants.rs  devenv.rs  doc_drift.rs  firewall.rs  globals.rs  hookscan.rs  images.rs  main.rs  paths.rs  proxy_embedded.rs  proxy_external.rs  pty.rs  reap.rs  run.rs  state.rs  suspend.rs
docs/ADRs/: 1.md  10.md  11.md  12.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  auth-proxy-out-of-sandbox.md  box-git-decoupled-from-host.md  box-git-tri-mode.md  network-namespace-via-pasta.md  persist-state-across-sessions.md  seccomp-adds-only-fifo-block.md  workspace-is-untrusted.md
src/: cli.rs  constants.rs
